Change signature of using